# real-time-ml-system-crypto-price-predictor

./: README.md
services/trade_producer/: Dockerfile  Makefile  README.md  pyproject.toml
services/trade_producer/src/: kraken_api.py  main.py
