[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Alberto Rosas",email = "alberto.rsesc@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "quixstreams (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
